# Forecasting_bike_sharing_availability

./: .gitignore  .pre-commit-config.yaml  Download and process events data.ipynb  README.md  data.dvc  models.dvc  pyproject.toml  rmse.dvc
.dvc/: config
bash_scripts/: example_logging.sh  run_arima.sh  run_arima_demand.sh  run_arima_sequential.sh  run_arima_supply.sh  test.sh
location_clustering/: pyproject.toml
location_clustering/notebooks/: 19b agg to small hexagons.ipynb  19c prepare dataset for clustering.ipynb  19f_library_example.ipynb
location_clustering/python_scripts/: 19d clustering.py  19d_clustering.py  19e_clustering_toy_example.py  19g_clustering_FB_less_complex.py  19g_clustering_less_complex.py
notebooks/: 01 Examine nextbike columns, generate data documentation.ipynb  01 First look at the data.ipynb  02 Transform nextbike dataset into supply-demand copy.ipynb  02 Transform nextbike dataset into supply-demand.ipynb  02a Same as 02 but add column maintenance, add data cleaning Dresden.ipynb  02b 02a for Freiburg.ipynb  03a EDA - explore counts and anomalies.ipynb  03b EDA - automatic EDA.ipynb  04a Download and process events data.ipynb  04b Download and process events data-only Browse AI.ipynb  04c Browse.AI continued.ipynb  04d Browse.AI multiply multiple days evets with Openai.ipynb  05a Unite all events into 1 dataset.ipynb  05b Unite all events into 1 dataset-continued.ipynb  05c add football matches.ipynb  06a add coordinates to each address.ipynb  06a add coordinates to each event using own df values.ipynb  06b add coordinates to events - using db data.ipynb  06b add coordinates to events - using meslis data.ipynb  06c what is the optimal coorinate preicision.ipynb  07a download and process weather data.ipynb  07b make weather data hourly.ipynb  08a plot station dynamics.ipynb  08b descriptive stats.ipynb  08c plot football day trips.ipynb  08d show bike seasonality.ipynb  08e plot daily tip counts.ipynb  08f descriptive stats of events.ipynb  08g more descriptive stats.ipynb  08h map dropped bikes.ipynb  09a filter out bike rebalancing.ipynb  09a transform bike dataset into trips.ipynb  10a calculate trip distance.ipynb  10b filter out bike rebalancing.ipynb  11a locations to hexagons.ipynb  11b transform to demand and supply, drop small hexagons.ipynb  (+21 more)
(+103 files in other folders)
