[tool.poetry]
name = "forecasting-bike-sharing-availability"
version = "0.1.0"
description = "Master's thesis with the topic \"Forecasting bike sharing availability\""
authors = ["Valentyna Sinichenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
pyreadr = "^0.5.2"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"
pyinstrument = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
