[tool.poetry]
name = "forecasting-bike-sharing-availability"
version = "0.1.0"
description = "Master's thesis with the topic \"Forecasting bike sharing availability\""
authors = ["Valentyna Sinichenko"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
pyreadr = "^0.5.2"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"
pyinstrument = "^5.0.0"
sweetviz = "^2.3.1"
ipykernel = "^6.29.5"
numpy = "2.0.2"
dvc-gdrive = "^3.0.1"
dvc = "^3.58.0"
openai = "1.57.1"
geopandas = "^1.0.1"
contextily = "^1.6.2"
plotly = "^6.0.0"
nbformat = ">=4.2.0"
h3 = "^4.2.2"
pre-commit = "^4.2.0"
nbstripout = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
